2025-05-08  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-recentf): Save recentf list.

	* init.el (auto-mode-alist): Treat .ipp and .tpp files as c++.
	(file-map): Bind "f" to `find-file'.
	(mode-specific-map): Bind "s" to `save-buffer'.
	Bind "r" to `deadgrep'.

	Improve tui and fuzzy-finder

	* site-lisp/tui/tui.el (tui-external-terminal-exec): Redirect
	output to a temp file.
	(tui-kill): Add header line.  Add preview.
	(tui-recentf): New command.
	* site-lisp/tui/fuzzy-finder.el (fuzzy-finder):
	(fuzzy-finder-build): New slot `layout'.
	(fuzzy-finder-fzf): Do not default to --preview-window noborder


2025-04-30  Zhengyi Fu  <i@fuzy.me>

	* init.el <eglot>: Do not specify clangd query-drivers.  Clang
	builtin headers should be preferred.

2025-04-24  Zhengyi Fu  <i@fuzy.me>

	Minor fixes

	* init.el (completion-cycle-threshold): Set to nil.
	* init.el (cmake-mode-hook, cmake-ts-mode-hook): Add `cmake-capf-setup'.
	* init.el <eglot>: Add /usr/bin/cc and /usr/bin/c++ to clangd query-drivers.

2025-04-21  Zhengyi Fu  <i@fuzy.me>

	Enable `pdf-view-mode' by default

	* init.el: Use `pdf-view-mode' by default.
	(pdf-view-mode): Autoload this function.

2025-04-16  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/dotemacs-core.el (enable-minor-mode-in-project): Try
	loading the minor mode if input doesn't match any candidates from
	the completion table.

2025-04-15  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add package `go-mode'.

2025-04-08  Zhengyi Fu  <i@fuzy.me>

	Add package `paredit'

	* init.el <paredit>: Enable `paredit-mode' in `lisp-data-mode' and
	`scheme-mode'.  Unbind M-s in `paredit-mode-map'.  Bind M-p to
	`paredit-splice-sexp'.

	* packages.el: Add package `paredit'.

2025-04-08  Zhengyi Fu  <i@fuzy.me>

	Remove `puni'

	* packages.el:
	* init.el: Remove `puni' configuration.

2025-04-07  Zhengyi Fu  <i@fuzy.me>

	* init.el (+repeat--post-command): Fixed the error where
	`this-command` is not a symbol.

2025-04-07  Zhengyi Fu  <i@fuzy.me>
